Fixing Collections unmodifiable issues with Streams for Java 8.